Fix light and dark mode

--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -301,6 +301,7 @@
         box-shadow: 0 2px 10px black, 0 3px 6px black;
     
         font-size: 13px;
+        margin-bottom: -10%;
         
     }
 
